Fix Font-Size + Line Height on Mobile

--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -287,12 +287,12 @@
   }
 
   .ss__comment {
-    font-size: 2.4vw;
+    font-size: 3vw;
     max-width: 50vw;
     margin-bottom: 5vw;
     padding: 4vw 8vw;
     box-shadow: var(--box-shadow-mobile) var(--lime);
-    line-height: 4vw;
+    line-height: 4.5vw;
   }
 
   .ss__detail {
@@ -319,7 +319,7 @@
 
   .landingPage__info {
     font-size: 5vw;
-    line-height: 6vw;
+    line-height: 7vw;
     max-width: 80vw;
     margin: 4vw 0 10vw;
     text-align: center;
@@ -335,6 +335,7 @@
     align-self: center;
     padding: 3vw 7vw;
     max-width: 70vw;
+    font-size: 2.75vw;
   }
 
   .landingPage__scroll-up-button {
